--- a/css/hearder.css
+++ b/css/hearder.css
@@ -3,8 +3,53 @@
     margin: 0;
     padding: 0;
 }
+
+header #mobi{
+    display: none;
+   
+    position: absolute;
+   
+    width: 50%;
+    height: 1000px;
+    background-color: rgb(255, 249, 243);
+}
+header #mobi>ul {
+    list-style: none;
+     
+    
+ }
+header #mobi>ul>li {
+ 
+   margin: 30px 15px;
+
+   
+}
+header #mobi>ul>li #linksex{
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+}
+header #mobi>ul>li #linksex:hover{
+    color: rgb(161, 77, 7);
+    text-decoration: none;
+    font-size: 20px;
+}
+header .daubuoi{
+    display: none ;
+}
+header .daubuoi .button{
+    float: right;
+    width: 30px;
+    height: 30px;
+    border: 1px solid black;
+    font-size: 20px;
+    
+}
 header{
-  
+    position: relative;
     background-repeat: no-repeat;
     background-size: 100%;
     background-image: linear-gradient(0,rgba(64, 34, 24,0.651),rgba(64, 34, 24, 0.651)) ,url(/image/banner.jpg) ;
@@ -70,4 +115,88 @@ header .container .iteam3 #hai{
     padding-top: 16px;
 
  
+}
+
+@media screen and (max-width: 1366px) {
+ 
+    header{
+      
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-image: linear-gradient(0,rgba(64, 34, 24,0.651),rgba(64, 34, 24, 0.651)) ,url(/image/banner.jpg) ;
+        
+       
+    }
+    header .container{
+        font-family: "Roboto", sans-serif;
+        font-weight: 300;
+        font-style: normal;
+        width: 1000px;
+        margin: auto;
+        display: flex;
+        border-bottom: 1px solid rgba(207, 207, 207, 0.664);
+    }
+    
+    
+    header .container .iteam2{
+        margin-left: 5px;
+        margin-top: 35px;
+        width: 80%;
+         
+     }
+    
+    
+    header .container>div>ul{
+        width: 100%;
+        list-style: none;
+        display: flex;
+       
+    }
+    header .container>div>ul>li{
+        margin-left: 7%;
+       
+    }
+    header .container>div>ul>li>a:hover{
+        transition-duration: 0.5s;
+       color: rgb(188, 152, 113);
+    }
+    header .container>div>ul>li>a{
+        text-decoration: none;
+        color: aliceblue;
+       
+    }
+    header .container .iteam3{
+        margin:5px 0 ;
+        margin-left: 1px;
+        width: 10%;
+     
+        background-color:rgb(60, 143, 71);
+        display: none;
+        color: white;
+       
+        
+    }
+ 
+    header .container .iteam3 #mot{
+        padding-top: 15px;
+        font-size: 20px;
+    }
+    header .container .iteam3 #hai{
+        padding-top: 16px;
+        font-size: 10px;
+    
+     
+    }
+  
+   
+    
+}
+@media screen and (max-width: 844px) {
+    header .container{
+        display: none;
+
+    }
+    header .daubuoi{
+        display: block;
+    }
 }
